# cpp_training

design_patterns/command/: CMakeLists.txt  command.hpp  main.cpp
design_patterns/factory/cpp2/: factory.h  fooB.cpp  memoize.h
design_patterns/observer/: CMakeLists.txt  main.cpp  observer.hpp
design_patterns/singleton/: CMakeLists.txt  main.cpp  singleton.hpp
gdb/: test.cpp
gdb/debug_release_core_dump/: CMakeLists.txt  main.cpp  readme.md
leetcode/: list.md
leetcode/94/: main.cpp
principle/cast/: class_cast.cpp
stl/: allocator.cpp
